# syatlebflix_backend

./: .gitignore  pyproject.toml
app/: settings.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_alter_user_email.py
core/migrations/models/: __init__.py
core/models/: usuario.py
core/serializers/: usuario.py
core/view/: usuario.py
